search/styles.css
html {
    font-family: 'Roboto', sans-serif; 
}

body {
    background-color: white; 
}

label {
    display: flex; 
    flex-direction: row;
    justify-content: flex-end;
    text-align: right;
    width: 400px;
    line-height: 26px;
    margin-bottom: 10px;
}

.navbar {
    list-style-type: none; 
    margin: 0;
    padding: 0; 
    overflow: hidden; 
    background-color: white; 
}

.navbox {
    float: right;
}

li a {
    display: block; 
    color: black; 
    text-align: center; 
    padding: 14px 16px; 
    text-decoration: none; 
    background-color: darkgray; 
}

li a:hover {
    background-color: red; 
}

.container {
    display: flex; 
    justify-content: center; 
    margin-top: 30px;
}

.search {
    display: block;
    margin-left: auto;
    margin-right: auto; 
    margin-top: 5px; 
    margin-bottom: 10px;
    border-radius: 15px;
    border-width: 1px; 
    padding: 5px;
    width: 40%;
}

.center {
    display:block; 
    margin-left: auto;
    margin-right: auto;
    margin-top:5px; 
    margin-bottom: 5px;
}

.sbox {
    width: 100%;
} 

.field {
    display: table-cell; 
    vertical-align: middle; 
    height: 40px;
}

.textinput {
    height: 20px;
    flex: 0 0 200px;
    margin-left: 10px;
}

#searchbar {
    width: 60%;
}

#test {
    background-color: blue;
}

